<resources>
    <string name="app_name">Near Labs</string>

    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="email_address">Email Address</string>
    <string name="hint_phone">Ex. (373) 378 8383</string>
    <string name="get_started">Get Started</string>
    <string name="already_account">Already have Near Account?</string>
    <string name="hint_wallet">walletName.near</string>
    <string name="login">Login</string>

    <string name="verification">Verification</string>
    <string name="sent_code_email">We\'ve sent a 6-digit verification code to the email address</string>
    <string name="sent_code_phone">We\'ve sent a 6-digit verification code to your phone</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="Continue">Continue</string>
    <string name="not_receive_code">Didn\'t receive your code?</string>
    <string name="resend_code">Resend your code</string>
    <string name="send_to_email">Send to a different email address</string>
    <string name="send_to_phone">Send to a different phone number</string>

    <string name="create_near_account">Create NEAR Account</string>
    <string name="create_near_account_info">Enter an Account ID to use with your NEAR account. Your Account ID will be used for all NEAR operations, including sending and receiving assets.</string>
    <string name="full_name">FULL NAME</string>
    <string name="wallet_id">WALLET ID</string>
    <string name="hint_full_name">Ex John Doe</string>
    <string name="hint_wallet_id">yourname.near</string>
    <string name="create_account">Create an account</string>
    <string name="login_with_near">Login with NEAR</string>

    <string name="gift_nft">Gift an NFT</string>
    <string name="search_people">Search People</string>
    <string name="Import">Import</string>
    <string name="send_gift">Send Gift</string>
    <string name="share_app">Share App</string>
    <string name="allow_contact_access">Allow <b>NearLabs</b> to access your contacts?</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="import_google_contacts">Import Gooogle Contacts</string>


</resources>
