<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    tools:context=".ui.main.view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:src="@drawable/bg_login" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignBottom="@+id/image"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_10sdp"
                android:src="@drawable/logo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_10sdp">

            <TextView
                android:id="@+id/tab_email"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:background="@drawable/round_corner_grey"
                android:gravity="center"
                android:text="@string/email"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/tab_phone"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:background="@null"
                android:gravity="center"
                android:text="@string/phone"
                android:textAllCaps="false"
                android:textColor="@color/grey_hint"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/round_corner_grey_with_border"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_15sdp" />

        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/round_corner_grey_with_border"
            android:hint="@string/hint_phone"
            android:inputType="textPhonetic"
            android:padding="@dimen/_15sdp"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_get_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/round_corner_grey_button"
            android:drawableRight="@drawable/arrow"
            android:drawablePadding="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_20sdp"
            android:stateListAnimator="@null"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_15sdp"
            android:background="@color/view_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/already_account"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/ed_wallet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:background="@drawable/round_corner_grey_with_border"
            android:hint="@string/hint_wallet"
            android:inputType="text"
            android:padding="@dimen/_15sdp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/round_corner_blue_button"
            android:drawableRight="@drawable/arrow"
            android:drawablePadding="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_20sdp"
            android:stateListAnimator="@null"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/already_account"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13ssp"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"/>

    </LinearLayout>
</ScrollView>