<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    tools:context=".ui.main.view.VerificationActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:src="@drawable/bg_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_35sdp"
        android:background="@drawable/round_corner_top_white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/verification"
                android:textColor="@android:color/black"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="@dimen/_21ssp" />

            <ImageView
                android:id="@+id/ic_cancel"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_dismiss"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        
        <View
            android:layout_width="@dimen/_120sdp"
            android:layout_height="3dp"
            android:background="@color/blue_button"/>

        <TextView
            android:id="@+id/tv_code_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sent_code_email"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:textColor="@android:color/black"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/tv_code_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="johndoe@gmail.com"
            android:textStyle="bold"
            android:textColor="@color/blue_button"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enter_verification_code"
            android:textColor="@color/grey_808080"
            android:layout_marginVertical="@dimen/_15sdp"
            android:textSize="@dimen/_14ssp" />

        <com.chaos.view.PinView
            android:id="@+id/firstPinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:layout_gravity="center"
            android:inputType="number"
            android:itemBackground="@drawable/round_corner_grey_pinview"
            android:padding="@dimen/_5sdp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cursorColor="@color/blue_button"
            app:cursorWidth="2dp"
            app:hideLineWhenFilled="false"
            app:itemCount="6"
            app:itemHeight="@dimen/_40sdp"
            app:itemSpacing="@dimen/_10sdp"
            app:itemWidth="@dimen/_40sdp"
            app:lineColor="@color/grey_border"
            app:itemRadius="@dimen/_10sdp"
            app:lineWidth="@dimen/_1sdp"
            app:viewType="rectangle" />

        <Button
            android:id="@+id/button_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/round_corner_grey_button"
            android:drawableRight="@drawable/arrow"
            android:drawablePadding="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_20sdp"
            android:stateListAnimator="@null"
            android:text="@string/Continue"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_15sdp"
            android:background="@color/view_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/not_receive_code"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/tv_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/send_to_email"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/blue_button"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/resend_code"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/blue_button"
            android:textSize="@dimen/_16ssp" />

    </LinearLayout>

</RelativeLayout>
