<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    tools:context=".ui.main.view.CreateAccountActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:src="@drawable/bg_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_35sdp"
        android:background="@drawable/round_corner_top_white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="@string/create_near_account"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_21ssp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ic_cancel"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_dismiss" />

        </RelativeLayout>

        <View
            android:layout_width="@dimen/_225sdp"
            android:layout_height="3dp"
            android:background="@color/blue_button" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/create_near_account_info"
                    android:textColor="@color/grey_808080"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/tv_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/full_name"
                    android:textColor="@color/grey_808080"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:id="@+id/ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/round_corner_grey_with_border"
                    android:hint="@string/hint_full_name"
                    android:inputType="textPersonName"
                    android:padding="@dimen/_15sdp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp">

                    <TextView
                        android:id="@+id/tv_wallet_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:text="@string/wallet_id"
                        android:textColor="@color/grey_808080"
                        android:textSize="@dimen/_12ssp" />

                    <ImageView
                        android:id="@+id/iv_info"
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:src="@drawable/ic_info"
                        app:tint="@color/grey_808080"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/ed_wallet_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/round_corner_grey_with_border"
                    android:hint="@string/hint_wallet_id"
                    android:inputType="textPersonName"
                    android:padding="@dimen/_15sdp" />

                <Button
                    android:id="@+id/button_create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/round_corner_grey_button"
                    android:drawableRight="@drawable/arrow"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingHorizontal="@dimen/_20sdp"
                    android:stateListAnimator="@null"
                    android:text="@string/create_near_account"
                    android:textAllCaps="false"
                    android:clickable="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginVertical="@dimen/_25sdp"
                    android:background="@color/view_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/already_account"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14ssp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/round_corner_blue_button"
                    android:drawableRight="@drawable/arrow"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingHorizontal="@dimen/_20sdp"
                    android:stateListAnimator="@null"
                    android:text="@string/login_with_near"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>