<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_corner_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/ic_user" />

            <TextView
                android:id="@+id/tv_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/_15sdp"
                android:text="@string/allow_contact_access"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_18ssp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/_15sdp"
            android:background="@color/view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_allow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/allow"
                android:textColor="@color/blue_button"
                android:textSize="@dimen/_16ssp" />

            <View
                android:layout_width="1dp"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/view_color" />

            <TextView
                android:id="@+id/tv_deny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/deny"
                android:textColor="@color/grey_808080"
                android:textSize="@dimen/_16ssp" />


        </LinearLayout>

    </LinearLayout>
</LinearLayout>